# BarberManager

./: .env.example  .gitignore  .replit  0.104.0  barbearia.db  check_users.py  create_demo_users.py  package-lock.json  package.json  pyproject.toml  pytest.ini  replit.md  run.py  run_tests.py  test.db  test_login.py  test_login_simple.py  test_password_hash.py
.qoder/quests/: project-development-continuation.md  project-development-tracking.md
.trae/documents/: design-system-barbermanager.md  plano-desenvolvimento-final.md  resumo-desenvolvimento-atualizado.md  status-desenvolvimento-atualizado.md
backend/: auth.py  barbearia.db  crud.py  database.py  main.py  models.py  schemas.py  test_login_simple.py
backend/config/: email_config.py
backend/routes/: appointments.py  auth.py  cash.py  clients.py  dashboard.py  pos.py  public.py  reports.py  services.py  users.py
backend/templates/email/: appointment_base.html
backend/utils/: cache.py  email_service.py  lgpd.py  notifications.py  rate_limiter.py  reports.py  security.py
docs/: api-documentation.md  deployment-guide.md  manual-usuario.md  plano-desenvolvimento.md  production-setup.md  prompts.md  resumo-desenvolvimento-concluido.md  status-desenvolvimento.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/contexts/: AuthContext.js  ThemeContext.js
frontend/src/pages/: Appointments.js  Cash.js  Clients.js  (+6 more)
tests/: README.md  conftest.py  test_appointments.py  test_auth.py  test_cash.py  test_clients.py  test_pos.py
(+10 files in other folders)
