[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.0.0",
    "fastapi>=0.104.0",
    "psycopg2-binary>=2.9.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
]
